Practicamente completado el manual del programador, hecho una diagrama de secuencias del login

--- a/latex/tex/A_Plan_proyecto.tex
+++ b/latex/tex/A_Plan_proyecto.tex
@@ -11,7 +11,7 @@ El desarrollo de la aplicación esta planteado usando Scrum como metodología de
 
 \begin{itemize}
 	\item Desarrollo iterativo o incremental mediante interacciones (\textit{sprints}).
-	\item La duración de los \textit{sprints} han sido de uno a cuatro semanas y cada una de ellas contiene las tareas o \textit{issues} realizadas.
+	\item La duración de los \textit{sprints} han sido de uno a tres semanas y cada una de ellas contiene las tareas o \textit{issues} realizadas.
 	\item Reuniones semanales de más de una hora comentando el avance del desarrollo y presentando partes del producto final.
 	\item También se planifica las siguientes tareas a realizar durante las reuniones.
 	
