--- a/latex/tex/C_Diseno.tex
+++ b/latex/tex/C_Diseno.tex
@@ -6,6 +6,8 @@
 
 \section{Diseño procedimental}
 
+\imagen{diagrama_secuencia_login}{Diagrama de secuencia de login.}
+
 \section{Diseño arquitectónico}
 
 
