--- a/python/Rastreador de componentes y eventos.ipynb
+++ b/python/Rastreador de componentes y eventos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -71,11 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path de los ficheros csv: \n",
+      "\t C:/Users/PC/Downloads/logs_Digital Literacy_20190625-1417.csv\n",
+      "Cargado el JSON C:/Users/PC/Downloads/Componentes y eventos.json\n"
+     ]
+    }
+   ],
    "source": [
     "#Cargamos los componentes y eventos si se ha seleccionado fichero json\n",
     "print(\"Path de los ficheros csv: \")\n",
@@ -104,11 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parseando:  C:/Users/PC/Downloads/logs_Digital Literacy_20190625-1417.csv\n"
+     ]
+    }
+   ],
    "source": [
     "for csvFile in csvFiles: #por cada fichero seleccionado, lo parsemamos uno a uno.\n",
     "    with open(csvFile,encoding='utf-8') as file:\n",
@@ -156,11 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guardado como JSON C:/Users/PC/Downloads/Componentes y eventos.json\n"
+     ]
+    }
+   ],
    "source": [
     "#Guardamos como JSON\n",
     "#mantenemos el nombre original del json y sino los llamamos componentes y eventos\n",
@@ -180,9 +206,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño del JSON antes de actualizar:\t 39116 bytes\n",
+      "Tamaño del JSON después de actualizar:\t 39767 bytes\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Tamaño del JSON antes de actualizar:\\t\",firstSize,\"bytes\")\n",
     "print(\"Tamaño del JSON después de actualizar:\\t\",afterSize,\"bytes\")"
