Añadidos nuevos agrupaciones de tiempo, AmPm y todos

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -80,6 +80,8 @@ tab.event=Events
 tab.grades=Grades
 choiceBox.DAY=Days
 choiceBox.HOUR=Hours
+choiceBox.AM_PM=AM/PM
+choiceBox.ALL=All
 choiceBox.DAY_OF_WEEK=Days of week
 choiceBox.YEAR=Years
 choiceBox.YEAR_WEEK=Weeks
