--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -79,6 +79,8 @@ tab.component=Componentes
 tab.event=Eventos
 choiceBox.DAY=Días
 choiceBox.HOUR=Horas
+choiceBox.AM_PM=AM/PM
+choiceBox.ALL=Todos
 choiceBox.DAY_OF_WEEK=Días de la semana
 choiceBox.YEAR=Años
 choiceBox.YEAR_WEEK=Semanas
