Actualizado el anexo con los diagramas de secuencia

--- a/latex/tex/B_Requisitos.tex
+++ b/latex/tex/B_Requisitos.tex
@@ -2,9 +2,38 @@
 
 \section{Introducción}
 
+En este anexo se comentará los objetivos generales del proyecto y detallando sobre los requisitos funcionales y no funcionales establecidos durante el desarrollo del proyecto.
+
 \section{Objetivos generales}
+El proyecto tiene como objetivos la refactorización del código junto con la integración de los registros del curso. Añadir nuevas mejoras de interacción con el usuario así como poder guardar los datos en ficheros cifrados. También realizar nuevas gráficas de los registros junto con sus opciones de filtrado.
 
 \section{Catalogo de requisitos}
+
+Estos son los siguientes requisitos funcionales y no funcionales:
+
+\subsection{Requisitos funcionales}
+
+\begin{itemize}
+	
+
+	\item \textbf{RF-1 Guardar los datos:} la aplicación tiene que ser capaz de guardar los datos para sus posteriores ejecuciones.
+	\begin{itemize}
+		\item \textbf{RF-1.1 Almacenar en un fichero:} la aplicación debe almacenarlo en un archivo local.
+		\item \textbf{RF-1.2 Cifrar los datos:} la aplicación debe encriptar los datos cuando se guarde.
+	\end{itemize}
+	\item \textbf{RF-2 Recordar datos sesión:} la aplicación debe dar la opción de recordar el usuario y \textit{host} en sucesivas ejecuciones.
+	\item \textbf{RF-3 }
+	\item 
+	
+\end{itemize}
+
+\subsection{Requisitos no funcionales}
+
+\begin{itemize}
+	\item \textbf{RNF-1 Tiempos de respuesta:} la aplicación debe tener buenos tiempos de respuesta a las diferentes acciones del usuarios. 
+	\item \textbf{RNF-2 Uso de memoria:} el consumo de memoria de la aplicación no debe ser excesiva.
+\end{itemize}
+
 
 \section{Especificación de requisitos}
 
