--- a/latex/tex/C_Diseno.tex
+++ b/latex/tex/C_Diseno.tex
@@ -6,7 +6,9 @@
 
 \section{Diseño procedimental}
 
-\imagen{diagrama_secuencia_login}{Diagrama de secuencia de login.}
+\imagenflotante{diagrama_secuencia_login}{Diagrama de secuencia del inicio de sesión.}
+\imagenflotante{diagrama_secuencia_webservice}{Diagrama de secuencia de recogida de datos de los servicios web.}
+\imagenflotante{diagrama_secuencia_logs}{Diagrama de secuencia de descarga de los registros del curso.}
 
 \section{Diseño arquitectónico}
 
