Actualizado el anexo

--- a/latex/bibliografiaAnexos.bib
+++ b/latex/bibliografiaAnexos.bib
@@ -66,9 +66,31 @@
 }
 
 
+
 @misc{noauthor_project_nodate,
 	title = {Project {Jupyter}},
 	url = {https://www.jupyter.org},
 	abstract = {The Jupyter Notebook is a web-based interactive computing platform. The notebook combines live code, equations, narrative text, visualizations, interactive dashboards and other media.},
-	urldate = {2019-06-25}
+	urldate = {2019-06-25},
+	month = apr,
+	year = {2019}
+}
+
+
+@misc{noauthor_sobran_2017,
+	title = {¿{Sobran} universidades en {España}?},
+	url = {https://www.universidadsi.es/sobran-universidades-espana/},
+	abstract = {Siguiendo el informe de la CRUE La Universidad Española en Cifras 2014/2015, dirigido por Jose Antonio Pérez García y Juan Hernández Armententeros, editores de universídad, tratamos de dar respuesta a la pregunta de si es España existen más universidades de las que debería. Los datos apuntan a que no.},
+	language = {es},
+	urldate = {2019-06-27},
+	journal = {Universidad, sí},
+	month = feb,
+	year = {2017}
+}
+
+
+@misc{noauthor_por_nodate,
+	title = {¿{Por} qué debo desinstalar las versiones anteriores de {Java} del sistema?},
+	url = {https://www.java.com/es/download/faq/remove_olderversions.xml},
+	urldate = {2019-06-28}
 }
