--- a/latex/tex/A_Plan_proyecto.tex
+++ b/latex/tex/A_Plan_proyecto.tex
@@ -110,7 +110,7 @@ Completar los apartados restantes del anexo y su revisión final.
 Desarrollado por una sola persona durante 5 meses. Calculando usando salarios medios brutos de \EUR{19.485} para un programador junior \cite{noauthor_salarios_2019}.
  Empleando la calculadora de sueldos netos de Cinco Días \cite{pais_calculadora_nodate} nos da los resultados en costes anuales. Calculamos también el sueldo mensual y el coste en 5 meses:
 
-\tablaSmallSinColores{Sueldos anuales, mensuales y de 5 meses.}{l c c c}{tabla_sueldos}
+\tablaSmallSinColores{Sueldos anuales, mensuales y de 5 meses.}{l r r r}{tabla_sueldos}
 { \multicolumn{1}{l}{Concepto} & Coste anual & Coste mensual & Coste 5 meses \\}{
 	Sueldo bruto            & \EUR{19.485,00} & \EUR{1.623,75}      & \EUR{8.118,75}       \\
 	Retenciones por IRPF    & \EUR{2.221,30}  & \EUR{185,11}        & \EUR{925,54}         \\
@@ -118,7 +118,11 @@ Desarrollado por una sola persona durante 5 meses. Calculando usando salarios me
 	Sueldo neto             & \textbf{\EUR{16.026,40}} & \textbf{\EUR{1.335,53}}      & \textbf{\EUR{6.677,67}}       \\
 }
 
-En principio el producto no está pensado venderlo, la intención es que sea de código libre y gratuito. Los potenciales clientes serían las Universidades que usen Moodle, por lo que si podríamos cobrar por crear versiones específicas de la aplicación para cada una de las Universidades. Otra forma de ingresos sería a partir de donaciones de la comunidad.
+En principio el producto no está pensado venderlo, la intención es que sea de código libre y gratuito. Los potenciales clientes serían las Universidades que usen Moodle, por lo que si podríamos cobrar por crear versiones específicas de la aplicación para cada una de las 80 Universidades de España \cite{noauthor_sobran_2017}. Al tener la aplicación una versión internacional se podría incluso usarse en Universidades extranjeras.
+
+Vendiendo licencias de la aplicación \EUR{50} a unas 150 Universidades cubriría todos los costos del desarrollo.
+
+Otra forma de ingresos sería a partir de donaciones de la comunidad.
 
 
 \subsection{Viabilidad legal}
@@ -153,7 +157,7 @@ En esta otra tabla se muestra las dependencias de JavaScript. Cabe destacar que 
 { \multicolumn{1}{l}{Dependencia} & Versión & Licencia \\}{
 Chart.js      & 2.8.0       & MIT      \\
 color-hash    & 1.0.3       & MIT      \\
-Google Charts & Desconocida & Privada  \\
+Google Charts & Desconocida & Freeware  \\
 html2canvas   & 0.4.1       & MIT      \\
 }
 
