--- a/latex/tex/B_Requisitos.tex
+++ b/latex/tex/B_Requisitos.tex
@@ -18,12 +18,16 @@ Estos son los siguientes requisitos funcionales y no funcionales:
 
 	\item \textbf{RF-1 Guardar los datos:} la aplicación tiene que ser capaz de guardar los datos para sus posteriores ejecuciones.
 	\begin{itemize}
-		\item \textbf{RF-1.1 Almacenar en un fichero:} la aplicación debe almacenarlo en un archivo local.
+		\item \textbf{RF-1.1 Almacenar en un fichero:} la aplicación debe almacenarlo en archivos locales.
 		\item \textbf{RF-1.2 Cifrar los datos:} la aplicación debe encriptar los datos cuando se guarde.
 	\end{itemize}
 	\item \textbf{RF-2 Recordar datos sesión:} la aplicación debe dar la opción de recordar el usuario y \textit{host} en sucesivas ejecuciones.
-	\item \textbf{RF-3 }
-	\item 
+	\item \textbf{RF-3 Opción de actualizar:} el usuario debe tener la posibilidad de elegir 
+	\item Visualización de los registros con diferentes filtros
+	\item Aspectos de visualización de los usuarios
+	\item Continuación con proyectos previos
+	
+	
 	
 \end{itemize}
 
@@ -31,10 +35,11 @@ Estos son los siguientes requisitos funcionales y no funcionales:
 
 \begin{itemize}
 	\item \textbf{RNF-1 Tiempos de respuesta:} la aplicación debe tener buenos tiempos de respuesta a las diferentes acciones del usuarios. 
-	\item \textbf{RNF-2 Uso de memoria:} el consumo de memoria de la aplicación no debe ser excesiva.
+	\item \textbf{RNF-2 Gestión de memoria:} el consumo de memoria de la aplicación no debe ser excesiva.
+	\item Usabilidad de la aplicación.
 \end{itemize}
 
 
 \section{Especificación de requisitos}
 
-
+\imagenflotante{diagrama_casos_uso}{Diagrama de casos de uso.}
