--- a/latex/tex/C_Diseno.tex
+++ b/latex/tex/C_Diseno.tex
@@ -2,9 +2,13 @@
 
 \section{Introducción}
 
+En este anexo se va a comentar los aspectos más relevantes del diseño de esta aplicación
+
 \section{Diseño de datos}
 
 \section{Diseño procedimental}
+
+\imagenflotante{diagrama_despliegue}{Diagrama de despliegue de la aplicación.}
 
 \imagenflotante{diagrama_secuencia_login}{Diagrama de secuencia del inicio de sesión.}
 \imagenflotante{diagrama_secuencia_webservice}{Diagrama de secuencia de recogida de datos de los servicios web.}
