Añadido los idiomas alemán, catalán, francés, portugués, italiano

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -1,8 +1,8 @@
-label.user=Username:
+label.user=User:
 label.course=Course:
 label.pass=Password:
 label.host=Host:
-chk.saveusername=Remember username
+chk.saveusername=Remember user
 chk.savehost=Remember host
 label.lastupdate=Last local update:
 label.never=Not available
